@@ -30,7 +30,6 @@ import java.io.PrintStream;
 import java.io.UncheckedIOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.Iterator;
@@ -40,8 +39,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.StringTokenizer;
-import java.util.function.BiConsumer;
-import java.util.function.Supplier;
 import java.util.zip.GZIPOutputStream;
 
 import javax.annotation.CheckForNull;
@@ -116,8 +113,6 @@ public class TextUICommandLine extends FindBugsCommandLine {
     private final Set<String> enabledBugReporterDecorators = new LinkedHashSet<>();
 
     private final Set<String> disabledBugReporterDecorators = new LinkedHashSet<>();
-
-    private final Set<Path> usedReporterPaths = new LinkedHashSet<>();
 
     private boolean setExitCode = false;
 
@@ -270,26 +265,18 @@ public class TextUICommandLine extends FindBugsCommandLine {
     private List<TextUIBugReporter> reporters = new ArrayList<>();
 
     /**
-     * Parse {@code optionExtraPart} and create a path-associated {@Link TextUIBugReporter} if it contains the
+     * Parse {@code optionExtraPart} and configure {@Link TextUIBugReporter} if it contains the
      * output file path such as {@code ":withMessages=path/to/file.extension"} and {@code "=/absolute/path/to/file.extension"}.
-     * Finally configure the created BugReporter with the {@code optionExtraPart}'s configuration information.
      *
+     * @param reporter the reporter to set a {@link PrintStream} based on the given file path
      * @param optionExtraPart extra part of the specified commandline option
-     * @param ctor            A supplier for an unconfigured {@Link TextUIBugReporter}.
-     * @param handleOptions   A function that can configure the created {@code BugReporter} instance.
-     * @param <T>             The implementation type of the {@Link TextUIBugReporter} to propagate type
-     *                        information between {@link ctor} and {@link handleOptions}.
-     * @return The fully configured reporter, or {@code null}, if the reporter would output to a file that is already used as a reporter output file.
+     * @return Remaining part of {@code optionExtraPart}
      */
-    /* visible for testing */ <T extends TextUIBugReporter> TextUIBugReporter initializeReporter(String optionExtraPart,
-            Supplier<T> ctor, BiConsumer<T, String> handleOptions) {
+    /* visible for testing */ String handleOutputFilePath(TextUIBugReporter reporter, String optionExtraPart) {
         int index = optionExtraPart.indexOf('=');
-        T reporter = ctor.get();
         if (index >= 0) {
-            Path path = Paths.get(optionExtraPart.substring(index + 1));
-            if (this.usedReporterPaths.contains(path)) {
-                return null;
-            }
+            Path path = Path.of(optionExtraPart.substring(index + 1)).normalize().toAbsolutePath();
+            reporter.setOutputTarget(path.toString());
             try {
                 OutputStream oStream = Files.newOutputStream(path, StandardOpenOption.CREATE, StandardOpenOption.WRITE,
                         StandardOpenOption.TRUNCATE_EXISTING);
@@ -297,13 +284,12 @@ public class TextUICommandLine extends FindBugsCommandLine {
                     oStream = new GZIPOutputStream(oStream);
                 }
                 reporter.setOutputStream(UTF8.printStream(oStream));
-                usedReporterPaths.add(path);
             } catch (IOException e) {
                 throw new UncheckedIOException(e);
             }
-            handleOptions.accept(reporter, optionExtraPart.substring(0, index));
+            optionExtraPart = optionExtraPart.substring(0, index);
         }
-        return reporter;
+        return optionExtraPart;
     }
 
     @SuppressFBWarnings("DM_EXIT")
@@ -357,44 +343,35 @@ public class TextUICommandLine extends FindBugsCommandLine {
             mergeSimilarWarnings = false;
         } else if ("-sortByClass".equals(option)) {
             bugReporterType = SORTING_REPORTER;
-            TextUIBugReporter reporter = initializeReporter(optionExtraPart,
-                    () -> new SortingBugReporter(),
-                    (r, rOpts) -> {
-                    });
-            if (reporter != null) {
-                reporters.add(reporter);
-            }
+            SortingBugReporter sortingBugReporter = new SortingBugReporter();
+            handleOutputFilePath(sortingBugReporter, optionExtraPart);
+            addDistinctBugReporter(sortingBugReporter);
         } else if ("-xml".equals(option)) {
             bugReporterType = XML_REPORTER;
-            TextUIBugReporter reporter = initializeReporter(
-                    optionExtraPart,
-                    () -> new XMLBugReporter(project),
-                    (r, arg) -> {
-                        if (!"".equals(arg)) {
-                            if ("withMessages".equals(arg)) {
-                                r.setAddMessages(true);
-                            } else if ("withAbridgedMessages".equals(arg)) {
-                                r.setAddMessages(true);
-                                xmlWithAbridgedMessages = true;
-                            } else if ("minimal".equals(arg)) {
-                                r.setMinimalXML(true);
-                            } else {
-                                throw new IllegalArgumentException("Unknown option: -xml:" + arg);
-                            }
-                        }
-                    });
-            if (reporter != null) {
-                reporters.add(reporter);
+            XMLBugReporter xmlBugReporter = new XMLBugReporter(project);
+            optionExtraPart = handleOutputFilePath(xmlBugReporter, optionExtraPart);
+            boolean xmlWithMessages = false;
+            boolean xmlMinimal = false;
+            if (!"".equals(optionExtraPart)) {
+                if ("withMessages".equals(optionExtraPart)) {
+                    xmlWithMessages = true;
+                } else if ("withAbridgedMessages".equals(optionExtraPart)) {
+                    xmlWithMessages = true;
+                    xmlWithAbridgedMessages = true;
+                } else if ("minimal".equals(optionExtraPart)) {
+                    xmlMinimal = true;
+                } else {
+                    throw new IllegalArgumentException("Unknown option: -xml:" + optionExtraPart);
+                }
             }
+            xmlBugReporter.setAddMessages(xmlWithMessages);
+            xmlBugReporter.setMinimalXML(xmlMinimal);
+            addDistinctBugReporter(xmlBugReporter);
         } else if ("-emacs".equals(option)) {
+            EmacsBugReporter emacsBugReporter = new EmacsBugReporter();
+            handleOutputFilePath(emacsBugReporter, optionExtraPart);
+            addDistinctBugReporter(emacsBugReporter);
             bugReporterType = EMACS_REPORTER;
-            TextUIBugReporter reporter = initializeReporter(optionExtraPart,
-                    () -> new EmacsBugReporter(),
-                    (r, rOpts) -> {
-                    });
-            if (reporter != null) {
-                reporters.add(reporter);
-            }
         } else if ("-relaxed".equals(option)) {
             relaxedReportingMode = true;
         } else if ("-train".equals(option)) {
@@ -403,40 +380,28 @@ public class TextUICommandLine extends FindBugsCommandLine {
             trainingInputDir = !"".equals(optionExtraPart) ? optionExtraPart : ".";
         } else if ("-html".equals(option)) {
             bugReporterType = HTML_REPORTER;
-            TextUIBugReporter reporter = initializeReporter(optionExtraPart,
-                    () -> new HTMLBugReporter(project, "default.xsl"),
-                    (r, rOpt) -> {
-                        if (!"".equals(rOpt)) {
-                            r.setStylesheet(rOpt);
-                        }
-                    });
-            if (reporter != null) {
-                reporters.add(reporter);
+            HTMLBugReporter htmlBugReporter = new HTMLBugReporter(project, "default.xsl");
+            optionExtraPart = handleOutputFilePath(htmlBugReporter, optionExtraPart);
+            if (!"".equals(optionExtraPart)) {
+                htmlBugReporter.setStylesheet(optionExtraPart);
             }
+            addDistinctBugReporter(htmlBugReporter);
         } else if ("-xdocs".equals(option)) {
             bugReporterType = XDOCS_REPORTER;
-            TextUIBugReporter reporter = initializeReporter(optionExtraPart,
-                    () -> new XDocsBugReporter(project),
-                    (r, rOpts) -> {
-                    });
-            if (reporter != null) {
-                reporters.add(reporter);
-            }
+            XDocsBugReporter xDocsBugReporter = new XDocsBugReporter(project);
+            handleOutputFilePath(xDocsBugReporter, optionExtraPart);
+            addDistinctBugReporter(xDocsBugReporter);
         } else if ("-sarif".equals(option)) {
             bugReporterType = SARIF_REPORTER;
-            TextUIBugReporter reporter = initializeReporter(optionExtraPart,
-                    () -> new SarifBugReporter(project),
-                    (r, rOpts) -> {
-                    });
-            if (reporter != null) {
-                reporters.add(reporter);
-            }
+            SarifBugReporter sarifBugReporter = new SarifBugReporter(project);
+            handleOutputFilePath(sarifBugReporter, optionExtraPart);
+            addDistinctBugReporter(sarifBugReporter);
         } else if ("-applySuppression".equals(option)) {
             applySuppression = true;
         } else if ("-quiet".equals(option)) {
             quiet = true;
         } else if ("-nested".equals(option)) {
-            scanNestedArchives = "".equals(optionExtraPart) || Boolean.valueOf(optionExtraPart).booleanValue();
+            scanNestedArchives = "".equals(optionExtraPart) || Boolean.parseBoolean(optionExtraPart);
         } else if ("-exitcode".equals(option)) {
             setExitCode = true;
         } else if ("-auxclasspathFromInput".equals(option)) {
@@ -710,7 +675,7 @@ public class TextUICommandLine extends FindBugsCommandLine {
         }
         switch (bugReporterType) {
         case PRINTING_REPORTER:
-            reporters.add(new PrintingBugReporter());
+            addDistinctBugReporter(new PrintingBugReporter());
             break;
         case SORTING_REPORTER:
         case XML_REPORTER:
@@ -850,5 +815,20 @@ public class TextUICommandLine extends FindBugsCommandLine {
      */
     private UserPreferences getUserPreferences() {
         return project.getConfiguration();
+    }
+
+    /**
+     * Adds a reporter to the aggregating list of reporters, skipping the operation if a duplicate reporter is already present.
+     *
+     * @param reporter The reporter to add to the list of known reporters.
+     */
+    private void addDistinctBugReporter(TextUIBugReporter reporter) {
+        for (TextUIBugReporter known : reporters) {
+            if (known.isDuplicateOf(reporter)) {
+                logger.warn("Attempted to add multiple reporters writing to the same file at {}. First reporter wins.", known.getOutputTarget());
+                return;
+            }
+        }
+        reporters.add(reporter);
     }
 }
